fix: fixing docs and get activity
