# docs/swagger.json
@@ -1812,6 +1812,12 @@
                 "justification": {
                     "type": "string"
                 },
+                "locationIDs": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
                 "name": {
                     "type": "string"
                 },
